--- a/feature-favorites/src/main/res/layout/fragment_favorites.xml
+++ b/feature-favorites/src/main/res/layout/fragment_favorites.xml
@@ -4,4 +4,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scrollbars="vertical"
-    tools:listitem="@layout/listview_row_select_language" />
+    tools:listitem="@layout/listview_row" />
