--- a/feature-history/src/main/res/layout/fragment_history.xml
+++ b/feature-history/src/main/res/layout/fragment_history.xml
@@ -5,13 +5,6 @@
     android:layout_height="match_parent"
     android:clipToPadding="false">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="@dimen/toolbar_height" />
-
     <EditText
         android:id="@+id/edit_input"
         style="@style/txtSearch.singleLine"
@@ -19,18 +12,19 @@
         android:inputType="text"
         android:lines="1"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/guideline" />
+        app:layout_constraintRight_toLeftOf="@id/guideline"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/btn_clear"
         style="@style/btnToolbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:tint="@color/txt_hint"
         android:visibility="gone"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_close"
+        app:tint="@color/txt_hint"
         tools:ignore="ContentDescription"
         tools:visibility="visible" />
 
@@ -42,6 +36,13 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edit_input" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="@dimen/toolbar_height" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
