--- a/feature-translate/src/main/res/layout/fragment_translation.xml
+++ b/feature-translate/src/main/res/layout/fragment_translation.xml
@@ -5,45 +5,6 @@
     android:layout_height="match_parent"
     android:clipToPadding="false">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="@dimen/toolbar_height" />
-
-    <EditText
-        android:id="@+id/edit_input"
-        style="@style/txtSearch.singleLine"
-        android:hint="@string/type_word"
-        android:inputType="text"
-        android:lines="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/guideline" />
-
-    <ImageView
-        android:id="@+id/btn_clear"
-        style="@style/btnToolbar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_close"
-        android:tint="@color/gray"
-        android:visibility="gone"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="ContentDescription"
-        tools:visibility="visible" />
-
-    <ProgressBar
-        android:id="@+id/search_progress"
-        style="@style/btnToolbar"
-        android:theme="@style/AppTheme.Progress"
-        android:visibility="gone"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="ContentDescription"
-        tools:visibility="visible" />
-
     <Button
         android:id="@+id/btn_lang_src"
         android:layout_width="0dp"
@@ -62,38 +23,52 @@
         app:layout_constraintTop_toBottomOf="@id/edit_input"
         tools:text="Английский" />
 
+    <EditText
+        android:id="@+id/edit_input"
+        style="@style/txtSearch.singleLine"
+        android:hint="@string/type_word"
+        android:inputType="text"
+        android:lines="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/guideline"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageButton
-        style="@style/btn"
         android:id="@+id/btn_lang_swap"
+        style="@style/btn"
         android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_swap"
-        android:tint="@color/colorPrimaryAlt"
         app:layout_constraintEnd_toStartOf="@+id/btn_lang_dst"
         app:layout_constraintStart_toEndOf="@+id/btn_lang_src"
-        app:layout_constraintTop_toBottomOf="@id/edit_input" />
+        app:layout_constraintTop_toBottomOf="@id/edit_input"
+        app:tint="@color/colorPrimaryAlt" />
 
-
-    <TextView
-        android:id="@+id/txt_translated"
-        style="@style/txtTranslated"
-        app:layout_constraintEnd_toStartOf="@id/icon_offline"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_lang_src"
-        tools:text="translation" />
+    <ImageView
+        android:id="@+id/btn_clear"
+        style="@style/btnToolbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_close"
+        app:tint="@color/gray"
+        android:visibility="gone"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription"
+        tools:visibility="visible" />
 
     <ImageView
         android:id="@+id/icon_offline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingEnd="@dimen/padding_default"
         android:paddingStart="@dimen/padding_default"
+        android:paddingEnd="@dimen/padding_default"
         android:src="@drawable/ic_offline_mode"
-        android:tint="@color/gray"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@id/txt_translated"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/txt_translated"
+        app:tint="@color/gray"
         tools:visibility="visible" />
 
     <LinearLayout
@@ -109,19 +84,38 @@
         app:layout_constraintTop_toBottomOf="@id/edit_input"
         tools:visibility="invisible">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/space_m"
-            android:text="@string/error_no_internet" />
-
         <Button
             android:id="@+id/btn_retry"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/retry_again" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/space_m"
+            android:text="@string/error_no_internet" />
     </LinearLayout>
+
+
+    <ProgressBar
+        android:id="@+id/search_progress"
+        style="@style/btnToolbar"
+        android:theme="@style/AppTheme.Progress"
+        android:visibility="gone"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/txt_translated"
+        style="@style/txtTranslated"
+        app:layout_constraintEnd_toStartOf="@id/icon_offline"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_lang_src"
+        tools:text="translation" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -130,4 +124,11 @@
         android:text="@string/copyright_yandex"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="@dimen/toolbar_height" />
 </androidx.constraintlayout.widget.ConstraintLayout>
